Corrected nav link spacing

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -39,7 +39,7 @@ nav .nav-links {
   width: 50vw;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   font-size: 1.2em;
 }
@@ -90,7 +90,8 @@ a {
   width: 50%;
 }
 #gigney-menu-logo img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   max-height: 100%;
 }
@@ -250,7 +251,8 @@ a {
 .left-img {
   height: 100%;
   max-width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .forgot-btn {
@@ -313,7 +315,8 @@ a {
 .signup-right img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .signup-next-button {
@@ -1000,7 +1003,8 @@ footer {
   align-items: center;
 }
 .create-ev-img-box img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -1062,7 +1066,9 @@ footer {
 }
 
 .event-preview-screen {
+  max-height: -moz-fit-content;
   max-height: fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   min-height: 1600px;
   padding: 2% 1%;
@@ -1081,7 +1087,8 @@ footer {
   width: 100%;
 }
 .event-main-image img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -1137,7 +1144,9 @@ footer {
   background-color: #ffffff;
   top: -18%;
   left: 4%;
+  width: -moz-fit-content;
   width: fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 
@@ -1146,7 +1155,9 @@ footer {
   background-color: #ffffff;
   top: -22%;
   left: 3%;
+  width: -moz-fit-content;
   width: fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 
@@ -1218,8 +1229,10 @@ footer {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  min-height: -moz-fit-content;
   min-height: fit-content;
   height: 200px;
+  max-height: -moz-fit-content;
   max-height: fit-content;
   margin: 2% 0;
 }
@@ -1478,7 +1491,8 @@ footer {
   .mobile-signup-logo .login-logo-img,
   .mobile-login-logo .signup-logo-img,
   .mobile-login-logo .login-logo-img {
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     max-width: 100%;
     max-height: 100%;
     filter: brightness(0) invert(1);
@@ -1923,6 +1937,4 @@ footer {
   .create-event-pricing .MuiOutlinedInput-root {
     height: 30px;
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
